Height adjusted to prevent content jumping

--- a/src/components/main/gearcalculator/GearCalculator.module.css
+++ b/src/components/main/gearcalculator/GearCalculator.module.css
@@ -11,7 +11,8 @@
 .midBlock {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   gap: 1rem;
   padding-left: 2rem;
+  height: 580px;
 }
